group = "xyz.spigotrce.gyalang"
version = "1.0-SNAPSHOT"

subprojects {
    apply plugin: "java-library"

    group = "xyz.spigotrce.gyalang"
    version = rootProject.version

    java {
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation platform("org.junit:junit-bom:6.0.0")
        testImplementation "org.junit.jupiter:junit-jupiter"
        testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    }

    test {
        useJUnitPlatform()
        maxHeapSize = "1g"
    }
}
